// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`bookmark reducer test should add bookmark to empty list 1`] = `
Array [
  Object {
    "url": "http://NOUSEURL",
  },
]
`;

exports[`bookmark reducer test should add bookmark to non-empty list 1`] = `
Array [
  Object {
    "url": "http://show.me.the.money",
  },
  Object {
    "url": "http://NOUSEURL",
  },
]
`;

exports[`bookmark reducer test should no add bookmark to empty list 1`] = `Array []`;
